--- a/stats-service/server/pom.xml
+++ b/stats-service/server/pom.xml
@@ -10,7 +10,6 @@
     </parent>
 
     <artifactId>server</artifactId>
-    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -62,6 +61,7 @@
             <groupId>ru.practicum</groupId>
             <artifactId>dto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
