--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,49 @@
 version: '3.1'
 services:
   stats-server:
+    build: ./stats-service/server
+    image: stats-server
+    container_name: stats-server
     ports:
       - "9090:9090"
+    depends_on:
+      - stats-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats_db
+      - TZ=Europe/Moscow
+      - SPRING_DATASOURCE_USERNAME=stats
+      - SPRING_DATASOURCE_PASSWORD=stats
 
   stats-db:
-    image: postgres:14-alpine
+    image: postgres:15-alpine
+    container_name: stats-db
+    ports:
+      - "6541:5432"
+    environment:
+      - POSTGRES_DB=stats_db
+      - POSTGRES_USER=stats
+      - POSTGRES_PASSWORD=stats
 
   ewm-service:
+    build: ./main-service
+    image: main-server
+    container_name: main-server
     ports:
       - "8080:8080"
+    depends_on:
+      - ewm-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/main_db
+      - TZ=Europe/Moscow
+      - SPRING_DATASOURCE_USERNAME=main
+      - SPRING_DATASOURCE_PASSWORD=main
 
   ewm-db:
-    image: postgres:14-alpine
+    image: postgres:15-alpine
+    container_name: main-db
+    ports:
+      - "6542:5432"
+    environment:
+      - POSTGRES_DB=main_db
+      - POSTGRES_USER=main
+      - POSTGRES_PASSWORD=main
