--- a/stats-service/server/src/main/resources/application.properties
+++ b/stats-service/server/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=shareit
-spring.datasource.password=shareit
+spring.datasource.url={SPRING_DATASOURCE_URL}
+spring.datasource.username={SPRING_DATASOURCE_USERNAME}
+spring.datasource.password={SPRING_DATASOURCE_PASSWORD}
 
 server.port=9090
