--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       - TZ=Europe/Moscow
       - SPRING_DATASOURCE_USERNAME=main
       - SPRING_DATASOURCE_PASSWORD=main
+      - stats-server.url=http://stats-server:9090
 
   ewm-db:
     image: postgres:15-alpine
