--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -6,12 +6,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialec
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url={SPRING_DATASOURCE_URL}
-#spring.datasource.username={SPRING_DATASOURCE_USERNAME}
-#spring.datasource.password={SPRING_DATASOURCE_PASSWORD}
-
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/main_db
-spring.datasource.username=main
-spring.datasource.password=main
+spring.datasource.url={SPRING_DATASOURCE_URL}
+spring.datasource.username={SPRING_DATASOURCE_USERNAME}
+spring.datasource.password={SPRING_DATASOURCE_PASSWORD}
+
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/main_db
+#spring.datasource.username=main
+#spring.datasource.password=main
