--- a/stats-service/server/pom.xml
+++ b/stats-service/server/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>server</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
